test/extension_test_cases/valid/dynamic/dynamiccomplexfunctions.wacc
# structs

# Output:
# #empty#

# Exit:
# 0

# Program:

begin
  doSomething(a, b) is
    return a[b]
  end
  bools := [ false, true ] ;
  i := 1 ;
  answer := call doSomething(bools, i) ;
  print "answer is " ;
  println answer ;
  exit 0
end
